tests/lean/attrCmd.lean.expected.out
attrCmd.lean:6:0: error: failed to synthesize instance
  HasPure M
